--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -1,7 +1,7 @@
 * {
 	border: none;
 	border-radius: 0;
-	font-family: "Terminus";
+	font-family: "JetBrains Mono";
 	font-size: 14px;
 	color: #60A6A6;
 }
