--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -43,12 +43,12 @@ window {
 	background: #62C68F;
 }
 
-#battery.warning {
+#battery.warning:not(.charging) {
 	color: #C1B7B7;
 	background: #7C78C1;
 }
 
-#battery.critical {
+#battery.critical:not(.charging) {
 	color: #C1B7B7;
 	background: #CC6690;
 }
